fix collapse on responsive

--- a/src/assets/scss/now-ui-dashboard/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/now-ui-dashboard/_sidebar-and-main-panel.scss
@@ -126,7 +126,6 @@
             display: block;
             height: auto;
             white-space: nowrap;
-            @extend .animation-transition-general;
         }
 
         i{
