--- a/src/assets/scss/now-ui-dashboard/_variables.scss
+++ b/src/assets/scss/now-ui-dashboard/_variables.scss
@@ -159,7 +159,7 @@ $font-paragraph:               1em          !default;
 $font-size-navbar:             1em          !default;
 $font-size-mini:               0.7142em     !default;
 $font-size-small:              0.8571em     !default;
-$font-size-base:               14px         !default;
+$font-size-base:               14px         !global;
 $font-size-large:              1em          !default;
 $font-size-large-navbar:       20px         !default;
 $font-size-blockquote:         1.1em        !default; // ~ 15px
